--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CTLZNYLKMZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CTLZNYLKMZ');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Τμήμα Μηχανικών Πληροφορικής και Ηλεκτρονικών Συστημάτων - Διεθνές Πανεπιστήμιο της Ελλάδος</title>
     <link rel="stylesheet" href="/static/css/index.css">
+    <title>Τμήμα Μηχανικών Πληροφορικής και Ηλεκτρονικών Συστημάτων - Διεθνές Πανεπιστήμιο της Ελλάδος</title>
 </head>
 <body>
     <header class="header header-dark">
