--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./static/images/logo.png">
+    <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="/static/css/index.css">
     <title>Τμήμα Μηχανικών Πληροφορικής και Ηλεκτρονικών Συστημάτων - Διεθνές Πανεπιστήμιο της Ελλάδος</title>
 </head>
